Fix error page layout shifting when loading (#1257)

--- a/frontend/src/pages/Error/components/ErrorRightPanel/ErrorRightPanel.module.scss
+++ b/frontend/src/pages/Error/components/ErrorRightPanel/ErrorRightPanel.module.scss
@@ -13,6 +13,7 @@
         padding: var(--size-medium) 0;
 
         .createCommentContainer {
+            margin-top: auto;
             padding: 0 var(--size-large);
             padding-top: var(--size-xLarge);
         }
